test/units/ParseSpec/invalid/decl+builtins/builtin-type-redeclared.algst
-- Bultin types are Int, Bool, Char, String.
--
-- TODO: Improve error messages! Compare with ca04cad7635e7a6ee9aa8a1238f51e61ca0bc4c9.

type Int = ()

data Bool = Yes | No

protocol Char
  = Eof
  | C +Int

data String
  = Cons Char String
  | Empty
